preparation/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mydeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      name: mytemp
      labels:
        app: swiggy
    spec:
      volumes:
        - name: devops
          emptyDir: {}

      containers:
        - name: cont1
          image: nginx
          volumeMounts:
            - mountPath: /opt/cont1
              name: devops
          

        - name: cont2
          image: nginx
          command: ["/bin/bash", "-c", "while true; do echo Need to prepare well; sleep 10; done"]
          volumeMounts:
            - mountPath: /opt/cont2
              name: devops
