preparation/deployment1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zomato
  template:
    metadata:
      name: mytempl
      labels:
        app: zomato
    spec:
      volumes:
        - name: devops1
          hostPath:
            path: /etc/myvolume

      containers:
        - name: cont1
          image: nginx
          volumeMounts:
            - mountPath: /opt/cont1
              name: devops1
            

        - name: cont2
          image: nginx
          command: ["/bin/bash", "-c", "while true; do echo need to prepare well; sleep 10; done"]
          volumeMounts:
            - mountPath: /opt/cont2
              name: devops1
