preparation/deployment2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uber
  template:
    metadata:
      name: mytemplate
      labels:
        app: uber
    spec:
      volumes:
        - name: devops2
          persistentVolumeClaim:
            claimName: pvc-1
      containers:
        - name: cont1
          image: nginx
          volumeMounts:
            - mountPath: /opt/cont1
              name: devops2
            


        - name: cont2
          image: nginx
          command: ["/bin/bash", "-c", "while true; do echo need to prepare well; sleep 10; done"]
          volumeMounts:
            - mountPath: /opt/cont2
              name: devops2
