preparation/allow-swiggy-client.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mynet
spec:
  podSelector:
    matchLabels:
        app: swiggy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
