preparation/deny-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {} 
  policyTypes:
    - Ingress
    - Egress
